fixed nav spacing

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@
   text-decoration: none;
 }
 
+html {
+  scroll-padding-top: 5rem;
+}
+
 body {
   background-color: var(--clr-back);
   font-weight: 400;
@@ -35,7 +39,7 @@ body {
   background-color: var(--clr-back);
 }
 
-nav {
+.nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
